scene/cursoritem: always reset the surface item if the surface is nullptr

The previous code misbehaved when a client first destroys the cursor surface and
only afterwards sets the cursor surface to null.
This is because SurfaceItemWayland::m_surface is a QPointer, so comparisons with
a nullptr would return true after the surface is destroyed, preventing the surface
item from being deleted.

BUG: 511075


(cherry picked from commit d875d0f2955cc926d48a35376773051fa6c6bb47)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>